First version that builds for rb5-flight

--- a/.gitmodules
+++ b/.gitmodules
@@ -44,7 +44,7 @@
 	branch = px4_firmware_nuttx-10.0.0+
 [submodule "platforms/qurt/dspal"]
 	path = platforms/qurt/dspal
-	url = https://github.com/ATLFlight/dspal.git
+	url = https://github.com/modalai/dspal.git
 [submodule "Tools/flightgear_bridge"]
 	path = Tools/flightgear_bridge
 	url = https://github.com/PX4/PX4-FlightGear-Bridge.git
