--- a/platforms/posix/src/px4/common/CMakeLists.txt
+++ b/platforms/posix/src/px4/common/CMakeLists.txt
@@ -37,7 +37,11 @@ add_subdirectory(lockstep_scheduler)
 
 set(EXTRA_DEPENDS)
 if("${CONFIG_SHMEM}" STREQUAL "1")
-	list(APPEND CMAKE_MODULE_PATH "${PX4_SOURCE_DIR}/boards/atlflight/cmake_hexagon")
+    if ("${PX4_BOARD}" MATCHES "modalai_rb5-flight")
+	   list(APPEND CMAKE_MODULE_PATH "${PX4_SOURCE_DIR}/boards/modalai/cmake_hexagon")
+    else()
+        list(APPEND CMAKE_MODULE_PATH "${PX4_SOURCE_DIR}/boards/atlflight/cmake_hexagon")
+    endif()
 	include(hexagon_sdk)
 	include_directories(${HEXAGON_SDK_INCLUDES})
 	include_directories(${PX4_BINARY_DIR}/platforms/posix)
