Added new drivers specific to ModalAI.

--- a/boards/modalai/rb5-flight/mainapp.config
+++ b/boards/modalai/rb5-flight/mainapp.config
@@ -8,11 +8,36 @@ muorb start
 
 sleep 1
 
-param set CAL_GYRO0_ID 4288784
-param set CAL_ACC0_ID 4288784
-param set CAL_MAG0_ID 101
-param set SYS_AUTOSTART 4001
+# param set SYS_AUTOSTART 4001
+
+param set SENS_BOARD_ROT 0
+
+# Run without magnetometer or barometer
 param set SYS_HAS_MAG 0
+param set SYS_HAS_BARO 0
+
+# Calibration values for the IMU
+param set CAL_GYRO0_ID 1
+param set CAL_GYRO0_PRIO 100
+param set CAL_GYRO0_ROT 0
+param set CAL_GYRO0_XOFF -0.017
+param set CAL_GYRO0_YOFF 0.001
+param set CAL_GYRO0_ZOFF -0.001
+
+param set CAL_ACC0_ID 1
+param set CAL_ACC0_PRIO 100
+param set CAL_ACC0_ROT 0
+param set CAL_ACC0_XOFF 0.068
+param set CAL_ACC0_XSCALE 1.002
+param set CAL_ACC0_YOFF 0.165
+param set CAL_ACC0_YSCALE 1.002
+param set CAL_ACC0_ZOFF 0.283
+param set CAL_ACC0_ZSCALE 0.998
+
+# Calibration for the magnetometer
+# param set CAL_MAG0_ID 101
+param set ATT_W_MAG 0.00
+
 param set BAT_N_CELLS 3
 param set MAV_TYPE 2
 param set MC_YAW_P 12
@@ -53,32 +78,11 @@ param set RC5_MAX 1920
 param set RC5_MIN 1078
 param set RC5_REV 1
 param set RC5_TRIM 1499
-param set ATT_W_MAG 0.00
-param set SENS_BOARD_ROT 10
-param set CAL_GYRO0_XOFF -0.017
-param set CAL_GYRO0_YOFF 0.001
-param set CAL_GYRO0_ZOFF -0.001
-param set CAL_GYRO0_XSCALE 1.0000
-param set CAL_GYRO0_YSCALE 1.0000
-param set CAL_GYRO0_ZSCALE 1.0000
-param set CAL_ACC0_XOFF 0.068
-param set CAL_ACC0_YOFF 0.165
-param set CAL_ACC0_ZOFF 0.283
-param set CAL_ACC0_XSCALE 1.002
-param set CAL_ACC0_YSCALE 1.002
-param set CAL_ACC0_ZSCALE 0.998
-param set RC_RECEIVER_TYPE 1
-param set UART_ESC_MODEL 2
-param set UART_ESC_BAUD 230400
-param set UART_ESC_MOTOR1 3
-param set UART_ESC_MOTOR2 1
-param set UART_ESC_MOTOR3 2
-param set UART_ESC_MOTOR4 4
 
-# logger start -e -t
+logger start -e -t
 param set MAV_BROADCAST 1
 dataman start
-# navigator start
+navigator start
 sleep 2
 mavlink start -x -u 14556 -r 1000000
 sleep 1
@@ -86,16 +90,32 @@ mavlink stream -u 14556 -s HIGHRES_IMU -r 50
 mavlink stream -u 14556 -s ATTITUDE -r 50
 mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
-# qshell df_mpu9250_wrapper start_without_mag
-# qshell df_bmp280_wrapper start
-# qshell sensors start
-qshell ekf2 start
+rc_controller start
+uart_esc_driver start
 
-# qshell commander start
-# qshell land_detector start multicopter
-# qshell mc_pos_control start
-# qshell mc_att_control start
+# Skip baro for now
+# baro_mpa_client start
+
+# Start this manually for now
+# imu_mpa_client start
+
+# Use imu_mpa_client instead
+# qshell df_mpu9250_wrapper start_without_mag
+
+# Use baro_mpa_client instead
+# qshell df_bmp280_wrapper start
+
+qshell sensors start
+qshell ekf2 start
+qshell commander start
+qshell land_detector start multicopter
+qshell mc_pos_control start
+qshell mc_att_control start
+
+# Use uart_esc_driver instead
 # qshell uart_esc start -D /dev/tty-5
+
+# Use rc_controller instead
 # qshell spektrum_rc start -d /dev/tty-12
 
 mavlink boot_complete
