--- a/platforms/qurt/CMakeLists.txt
+++ b/platforms/qurt/CMakeLists.txt
@@ -45,7 +45,7 @@ else()
 		SOURCES
 			${PX4_BINARY_DIR}/apps.cpp
 		LINK_LIBS
-			modules__muorb__adsp
+			modules__muorb__slpi
 			${module_libraries}
 			m
 		)
