--- a/boards/modalai/rb5-flight/mainapp.config
+++ b/boards/modalai/rb5-flight/mainapp.config
@@ -8,90 +8,90 @@ muorb start
 
 sleep 1
 
-# param set SYS_AUTOSTART 4001
+# # param set SYS_AUTOSTART 4001
 
-param set SENS_BOARD_ROT 0
+# param set SENS_BOARD_ROT 0
 
 # Run without magnetometer or barometer
-param set SYS_HAS_MAG 0
-param set SYS_HAS_BARO 0
+# param set SYS_HAS_MAG 0
+# param set SYS_HAS_BARO 0
 
 # Calibration values for the IMU
-param set CAL_GYRO0_ID 1
-param set CAL_GYRO0_PRIO 100
-param set CAL_GYRO0_ROT 0
-param set CAL_GYRO0_XOFF -0.017
-param set CAL_GYRO0_YOFF 0.001
-param set CAL_GYRO0_ZOFF -0.001
+# param set CAL_GYRO0_ID 1
+# param set CAL_GYRO0_PRIO 100
+# param set CAL_GYRO0_ROT 0
+# param set CAL_GYRO0_XOFF -0.017
+# param set CAL_GYRO0_YOFF 0.001
+# param set CAL_GYRO0_ZOFF -0.001
 
-param set CAL_ACC0_ID 1
-param set CAL_ACC0_PRIO 100
-param set CAL_ACC0_ROT 0
-param set CAL_ACC0_XOFF 0.068
-param set CAL_ACC0_XSCALE 1.002
-param set CAL_ACC0_YOFF 0.165
-param set CAL_ACC0_YSCALE 1.002
-param set CAL_ACC0_ZOFF 0.283
-param set CAL_ACC0_ZSCALE 0.998
+# param set CAL_ACC0_ID 1
+# param set CAL_ACC0_PRIO 100
+# param set CAL_ACC0_ROT 0
+# param set CAL_ACC0_XOFF 0.068
+# param set CAL_ACC0_XSCALE 1.002
+# param set CAL_ACC0_YOFF 0.165
+# param set CAL_ACC0_YSCALE 1.002
+# param set CAL_ACC0_ZOFF 0.283
+# param set CAL_ACC0_ZSCALE 0.998
 
 # Calibration for the magnetometer
-# param set CAL_MAG0_ID 101
-param set ATT_W_MAG 0.00
+# # param set CAL_MAG0_ID 101
+# param set ATT_W_MAG 0.00
 
-param set BAT_N_CELLS 3
-param set MAV_TYPE 2
-param set MC_YAW_P 12
-param set MC_YAWRATE_P 0.08
-param set MC_YAWRATE_I 0.0
-param set MC_YAWRATE_D 0
-param set MC_PITCH_P 7.0
-param set MC_PITCHRATE_P 0.08
-param set MC_PITCHRATE_I 0.0
-param set MC_PITCHRATE_D 0.001
-param set MC_ROLL_P 7.0
-param set MC_ROLLRATE_P 0.08
-param set MC_ROLLRATE_I 0.0
-param set MC_ROLLRATE_D 0.001
-param set RC_MAP_MODE_SW 5
-param set RC_MAP_YAW 4
-param set RC_MAP_THROTTLE 3
-param set RC_MAP_ROLL 1
-param set RC_MAP_PITCH 2
-param set RC_CHAN_CNT 5
-param set RC1_MAX 1921
-param set RC1_MIN 1078
-param set RC1_REV -1
-param set RC1_TRIM 1498
-param set RC2_MAX 1920
-param set RC2_MIN 1077
-param set RC2_REV 1
-param set RC2_TRIM 1496
-param set RC3_MAX 1920
-param set RC3_MIN 1085
-param set RC3_REV 1
-param set RC3_TRIM 1085
-param set RC4_MAX 1912
-param set RC4_MIN 1078
-param set RC4_REV -1
-param set RC4_TRIM 1499
-param set RC5_MAX 1920
-param set RC5_MIN 1078
-param set RC5_REV 1
-param set RC5_TRIM 1499
+# param set BAT_N_CELLS 3
+# param set MAV_TYPE 2
+# param set MC_YAW_P 12
+# param set MC_YAWRATE_P 0.08
+# param set MC_YAWRATE_I 0.0
+# param set MC_YAWRATE_D 0
+# param set MC_PITCH_P 7.0
+# param set MC_PITCHRATE_P 0.08
+# param set MC_PITCHRATE_I 0.0
+# param set MC_PITCHRATE_D 0.001
+# param set MC_ROLL_P 7.0
+# param set MC_ROLLRATE_P 0.08
+# param set MC_ROLLRATE_I 0.0
+# param set MC_ROLLRATE_D 0.001
+# param set RC_MAP_MODE_SW 5
+# param set RC_MAP_YAW 4
+# param set RC_MAP_THROTTLE 3
+# param set RC_MAP_ROLL 1
+# param set RC_MAP_PITCH 2
+# param set RC_CHAN_CNT 5
+# param set RC1_MAX 1921
+# param set RC1_MIN 1078
+# param set RC1_REV -1
+# param set RC1_TRIM 1498
+# param set RC2_MAX 1920
+# param set RC2_MIN 1077
+# param set RC2_REV 1
+# param set RC2_TRIM 1496
+# param set RC3_MAX 1920
+# param set RC3_MIN 1085
+# param set RC3_REV 1
+# param set RC3_TRIM 1085
+# param set RC4_MAX 1912
+# param set RC4_MIN 1078
+# param set RC4_REV -1
+# param set RC4_TRIM 1499
+# param set RC5_MAX 1920
+# param set RC5_MIN 1078
+# param set RC5_REV 1
+# param set RC5_TRIM 1499
 
-logger start -e -t
-param set MAV_BROADCAST 1
-dataman start
-navigator start
-sleep 2
-mavlink start -x -u 14556 -r 1000000
-sleep 1
-mavlink stream -u 14556 -s HIGHRES_IMU -r 50
-mavlink stream -u 14556 -s ATTITUDE -r 50
-mavlink stream -u 14556 -s RC_CHANNELS -r 20
+# logger start -e -t
+# param set MAV_BROADCAST 1
+# dataman start
+# navigator start
+# sleep 2
+# mavlink start -x -u 14556 -r 1000000
+# sleep 1
+# mavlink stream -u 14556 -s HIGHRES_IMU -r 50
+# mavlink stream -u 14556 -s ATTITUDE -r 50
+# mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
-rc_controller start
-uart_esc_driver start
+# rc_controller start
+# uart_esc_driver start
 
 # Skip baro for now
 # baro_mpa_client start
@@ -106,11 +106,11 @@ uart_esc_driver start
 # qshell df_bmp280_wrapper start
 
 qshell sensors start
-qshell ekf2 start
-qshell commander start
-qshell land_detector start multicopter
-qshell mc_pos_control start
-qshell mc_att_control start
+# qshell ekf2 start
+# qshell commander start
+# qshell land_detector start multicopter
+# qshell mc_pos_control start
+# qshell mc_att_control start
 
 # Use uart_esc_driver instead
 # qshell uart_esc start -D /dev/tty-5
@@ -118,4 +118,4 @@ qshell mc_att_control start
 # Use rc_controller instead
 # qshell spektrum_rc start -d /dev/tty-12
 
-mavlink boot_complete
+# mavlink boot_complete
