Cleaning up the build to remove the SHMEM and FastRPC parts

--- a/platforms/qurt/CMakeLists.txt
+++ b/platforms/qurt/CMakeLists.txt
@@ -16,9 +16,9 @@ px4_qurt_generate_builtin_commands(
 	MODULE_LIST ${module_libraries}
 )
 
-FASTRPC_STUB_GEN(px4muorb.idl)
+# FASTRPC_STUB_GEN(px4muorb.idl)
 
-add_definitions(-D__QAIC_SKEL_EXPORT=__EXPORT)
+# add_definitions(-D__QAIC_SKEL_EXPORT=__EXPORT)
 
 # Enable build without HexagonSDK to check link dependencies
 if ("${QURT_ENABLE_STUBS}" STREQUAL "1")
@@ -41,7 +41,7 @@ else()
 	# Generate the DSP lib and stubs but not the apps side executable
 	# The Apps side executable is generated via the posix_eagle_xxxx target
 	QURT_LIB(LIB_NAME px4
-		IDL_NAME px4muorb
+		# IDL_NAME px4muorb
 		SOURCES
 			${PX4_BINARY_DIR}/apps.cpp
 		LINK_LIBS
