First fully working test case for the new protobuf muorb

--- a/boards/modalai/rb5-flight/mainapp.config
+++ b/boards/modalai/rb5-flight/mainapp.config
@@ -6,7 +6,7 @@
 uorb start
 muorb start
 
-sleep 1
+# sleep 1
 
 # # param set SYS_AUTOSTART 4001
 
@@ -106,6 +106,7 @@ sleep 1
 # qshell df_bmp280_wrapper start
 
 qshell sensors start
+
 # qshell ekf2 start
 # qshell commander start
 # qshell land_detector start multicopter
