First, rough, version of parameter setting from server to client.

--- a/boards/modalai/rb5-flight/mainapp.config
+++ b/boards/modalai/rb5-flight/mainapp.config
@@ -105,7 +105,9 @@ muorb start
 # Use baro_mpa_client instead
 # qshell df_bmp280_wrapper start
 
-qshell sensors start
+# qshell sensors start
+
+# sleep 5
 
 # qshell ekf2 start
 # qshell commander start
@@ -120,3 +122,5 @@ qshell sensors start
 # qshell spektrum_rc start -d /dev/tty-12
 
 # mavlink boot_complete
+
+# shutdown
