Fixed various initialization issues with the parameter server and client

--- a/boards/modalai/rb5-flight/mainapp.config
+++ b/boards/modalai/rb5-flight/mainapp.config
@@ -6,7 +6,10 @@
 uorb start
 muorb start
 
-# sleep 1
+# Sleep a little here. A lot happens when the uorb and muorb start
+# and we need to make sure that it all completes successfully to avoid
+# any possible race conditions.
+sleep 1
 
 # # param set SYS_AUTOSTART 4001
 
@@ -36,7 +39,7 @@ muorb start
 
 # Calibration for the magnetometer
 # # param set CAL_MAG0_ID 101
-# param set ATT_W_MAG 0.00
+param set ATT_W_MAG 0.00
 
 # param set BAT_N_CELLS 3
 # param set MAV_TYPE 2
