First version with the new IMU thin client

--- a/boards/modalai/rb5-flight/mainapp.config
+++ b/boards/modalai/rb5-flight/mainapp.config
@@ -39,7 +39,7 @@ sleep 1
 
 # Calibration for the magnetometer
 # # param set CAL_MAG0_ID 101
-param set ATT_W_MAG 0.00
+# param set ATT_W_MAG 0.00
 
 # param set BAT_N_CELLS 3
 # param set MAV_TYPE 2
@@ -108,7 +108,8 @@ param set ATT_W_MAG 0.00
 # Use baro_mpa_client instead
 # qshell df_bmp280_wrapper start
 
-# qshell sensors start
+qshell sensors start
+qshell imu_thin_client start
 
 # sleep 5
 
