First version working all the way to the ESC driver

--- a/boards/modalai/rb5-flight/mainapp.config
+++ b/boards/modalai/rb5-flight/mainapp.config
@@ -55,12 +55,19 @@ sleep 1
 # param set MC_ROLLRATE_P 0.08
 # param set MC_ROLLRATE_I 0.0
 # param set MC_ROLLRATE_D 0.001
+
+param set RC_CHAN_CNT 4
+param set RC_MAP_ROLL 1
+param set RC_MAP_PITCH 2
+param set RC_MAP_THROTTLE 3
+param set RC_MAP_YAW 4
 # param set RC_MAP_MODE_SW 5
-# param set RC_MAP_YAW 4
-# param set RC_MAP_THROTTLE 3
-# param set RC_MAP_ROLL 1
-# param set RC_MAP_PITCH 2
-# param set RC_CHAN_CNT 5
+# param set RC_MAP_AUX2 6
+# param set RC_MAP_AUX1 7
+# param set RC_MAP_FLAPS 8
+# param set RC_MAP_RETURN_SW 9
+# param set RC_MAP_POSCTL_SW 10
+# param set RC_MAP_LOITER_SW 11
 # param set RC1_MAX 1921
 # param set RC1_MIN 1078
 # param set RC1_REV -1
@@ -82,49 +89,59 @@ sleep 1
 # param set RC5_REV 1
 # param set RC5_TRIM 1499
 
+param set RTL_LAND_DELAY 1.0
+param set RTL_DESCEND_ALT 10
+param set RTL_RETURN_ALT 50
+
 # logger start -e -t
 # param set MAV_BROADCAST 1
 # dataman start
 # navigator start
 # sleep 2
-# mavlink start -x -u 14556 -r 1000000
+# mavlink start -x -u 14556 -r 100000
 # sleep 1
 # mavlink stream -u 14556 -s HIGHRES_IMU -r 50
 # mavlink stream -u 14556 -s ATTITUDE -r 50
 # mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
-# rc_controller start
-# uart_esc_driver start
+# qshell baro_thin_client start
+qshell imu_thin_client start
+# qshell rc driver
+# qshell esc driver
 
-# Skip baro for now
-# baro_mpa_client start
-
-# Start this manually for now
-# imu_mpa_client start
-
-# Use imu_mpa_client instead
-# qshell df_mpu9250_wrapper start_without_mag
-
-# Use baro_mpa_client instead
-# qshell df_bmp280_wrapper start
+sleep 1
 
 qshell sensors start
-qshell imu_thin_client start
 
-# sleep 5
+sleep 1
 
-# qshell ekf2 start
-# qshell commander start
+qshell ekf2 start
+
+sleep 1
+
+qshell commander start
+
+sleep 1
+
+qshell mc_pos_control start
+
+sleep 1
+
+qshell mc_att_control start
+
+sleep 1
+
+qshell mc_rate_control start
+
+sleep 1
+
+qshell rc_update start
+
+# sleep 1
+
 # qshell land_detector start multicopter
-# qshell mc_pos_control start
-# qshell mc_att_control start
 
-# Use uart_esc_driver instead
-# qshell uart_esc start -D /dev/tty-5
-
-# Use rc_controller instead
-# qshell spektrum_rc start -d /dev/tty-12
+rc_controller start
+uart_esc_driver start
 
 # mavlink boot_complete
-
-# shutdown
