Added ModalAI barometer driver

--- a/boards/modalai/rb5-flight/mainapp.config
+++ b/boards/modalai/rb5-flight/mainapp.config
@@ -61,6 +61,7 @@ param set RC_MAP_ROLL 1
 param set RC_MAP_PITCH 2
 param set RC_MAP_THROTTLE 3
 param set RC_MAP_YAW 4
+
 # param set RC_MAP_MODE_SW 5
 # param set RC_MAP_AUX2 6
 # param set RC_MAP_AUX1 7
@@ -104,44 +105,44 @@ param set RTL_RETURN_ALT 50
 # mavlink stream -u 14556 -s ATTITUDE -r 50
 # mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
-# qshell baro_thin_client start
-qshell imu_thin_client start
+qshell baro_thin_client start
+# qshell imu_thin_client start
 # qshell rc driver
 # qshell esc driver
 
-sleep 1
+# sleep 1
 
-qshell sensors start
+# qshell sensors start
 
-sleep 1
+# sleep 1
 
-qshell ekf2 start
+# qshell ekf2 start
 
-sleep 1
+# sleep 1
 
-qshell commander start
+# qshell commander start
 
-sleep 1
+# sleep 1
 
-qshell mc_pos_control start
+# qshell mc_pos_control start
 
-sleep 1
+# sleep 1
 
-qshell mc_att_control start
+# qshell mc_att_control start
 
-sleep 1
+# sleep 1
 
-qshell mc_rate_control start
+# qshell mc_rate_control start
 
-sleep 1
+# sleep 1
 
-qshell rc_update start
+# qshell rc_update start
 
 # sleep 1
 
 # qshell land_detector start multicopter
 
-rc_controller start
-uart_esc_driver start
+# rc_controller start
+# uart_esc_driver start
 
 # mavlink boot_complete
