Ported QURT I2C driver to new environment

--- a/boards/modalai/rb5-flight/mainapp.config
+++ b/boards/modalai/rb5-flight/mainapp.config
@@ -90,9 +90,9 @@ param set RC_MAP_YAW 4
 # param set RC5_REV 1
 # param set RC5_TRIM 1499
 
-param set RTL_LAND_DELAY 1.0
-param set RTL_DESCEND_ALT 10
-param set RTL_RETURN_ALT 50
+# param set RTL_LAND_DELAY 1.0
+# param set RTL_DESCEND_ALT 10
+# param set RTL_RETURN_ALT 50
 
 # logger start -e -t
 # param set MAV_BROADCAST 1
@@ -105,7 +105,10 @@ param set RTL_RETURN_ALT 50
 # mavlink stream -u 14556 -s ATTITUDE -r 50
 # mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
-qshell baro_thin_client start
+# Start magnetometer driver
+qshell hmc5883 start -X -b 1
+
+# qshell baro_thin_client start
 # qshell imu_thin_client start
 # qshell rc driver
 # qshell esc driver
