Added UART ESC driver and QURT UART support.

--- a/boards/modalai/rb5-flight/mainapp.config
+++ b/boards/modalai/rb5-flight/mainapp.config
@@ -106,7 +106,7 @@ param set RC_MAP_YAW 4
 # mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
 # Start magnetometer driver
-qshell hmc5883 start -X -b 1
+# qshell hmc5883 start -X -b 1
 
 # qshell baro_thin_client start
 # qshell imu_thin_client start
