Improved UART support on QURT platform with dedicated driver.

--- a/src/lib/drivers/device/CMakeLists.txt
+++ b/src/lib/drivers/device/CMakeLists.txt
@@ -44,6 +44,7 @@ elseif((${PX4_PLATFORM} MATCHES "qurt"))
 	list(APPEND SRCS_PLATFORM
 		qurt/I2C.cpp
 		qurt/SPI.cpp
+		qurt/uart.c
 	)
 elseif(UNIX AND NOT APPLE AND NOT (${PX4_PLATFORM} MATCHES "qurt")) #TODO: add linux PX4 platform type
 	# Linux I2Cdev and SPIdev
