Ported modalai_esc driver to SLPI and fixed voltage calculation from teh feedback massage.

--- a/boards/modalai/rb5-flight/mainapp.config
+++ b/boards/modalai/rb5-flight/mainapp.config
@@ -56,11 +56,11 @@ sleep 1
 # param set MC_ROLLRATE_I 0.0
 # param set MC_ROLLRATE_D 0.001
 
-param set RC_CHAN_CNT 4
-param set RC_MAP_ROLL 1
-param set RC_MAP_PITCH 2
-param set RC_MAP_THROTTLE 3
-param set RC_MAP_YAW 4
+# param set RC_CHAN_CNT 4
+# param set RC_MAP_ROLL 1
+# param set RC_MAP_PITCH 2
+# param set RC_MAP_THROTTLE 3
+# param set RC_MAP_YAW 4
 
 # param set RC_MAP_MODE_SW 5
 # param set RC_MAP_AUX2 6
@@ -147,5 +147,7 @@ param set RC_MAP_YAW 4
 
 # rc_controller start
 # uart_esc_driver start
+
+qshell modalai_esc start
 
 # mavlink boot_complete
