Removed bogus mag sensor since real one works now

--- a/boards/modalai/rb5-flight/mainapp.config
+++ b/boards/modalai/rb5-flight/mainapp.config
@@ -108,8 +108,8 @@ sleep 1
 # Start magnetometer driver
 # qshell hmc5883 start -X -b 1
 
-# qshell baro_thin_client start
-# qshell imu_thin_client start
+qshell baro_thin_client start
+qshell imu_thin_client start
 # qshell rc driver
 # qshell esc driver
 
