--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -20,22 +20,22 @@ sleep 1
 # param set SYS_HAS_BARO 0
 
 # Calibration values for the IMU
-# param set CAL_GYRO0_ID 1
-# param set CAL_GYRO0_PRIO 100
-# param set CAL_GYRO0_ROT 0
-# param set CAL_GYRO0_XOFF -0.017
-# param set CAL_GYRO0_YOFF 0.001
-# param set CAL_GYRO0_ZOFF -0.001
+param set CAL_GYRO0_ID 1
+param set CAL_GYRO0_PRIO 100
+param set CAL_GYRO0_ROT 0
+param set CAL_GYRO0_XOFF -0.017
+param set CAL_GYRO0_YOFF 0.001
+param set CAL_GYRO0_ZOFF -0.001
 
-# param set CAL_ACC0_ID 1
-# param set CAL_ACC0_PRIO 100
-# param set CAL_ACC0_ROT 0
-# param set CAL_ACC0_XOFF 0.068
-# param set CAL_ACC0_XSCALE 1.002
-# param set CAL_ACC0_YOFF 0.165
-# param set CAL_ACC0_YSCALE 1.002
-# param set CAL_ACC0_ZOFF 0.283
-# param set CAL_ACC0_ZSCALE 0.998
+param set CAL_ACC0_ID 1
+param set CAL_ACC0_PRIO 100
+param set CAL_ACC0_ROT 0
+param set CAL_ACC0_XOFF 0.068
+param set CAL_ACC0_XSCALE 1.002
+param set CAL_ACC0_YOFF 0.165
+param set CAL_ACC0_YSCALE 1.002
+param set CAL_ACC0_ZOFF 0.283
+param set CAL_ACC0_ZSCALE 0.998
 
 # Calibration for the magnetometer
 # param set CAL_MAG0_ID 0
@@ -71,11 +71,11 @@ sleep 1
 # param set MC_ROLLRATE_I 0.0
 # param set MC_ROLLRATE_D 0.001
 
-# param set RC_CHAN_CNT 4
-# param set RC_MAP_ROLL 1
-# param set RC_MAP_PITCH 2
-# param set RC_MAP_THROTTLE 3
-# param set RC_MAP_YAW 4
+param set RC_CHAN_CNT 4
+param set RC_MAP_THROTTLE 1
+param set RC_MAP_YAW 2
+param set RC_MAP_PITCH 3
+param set RC_MAP_ROLL 4
 
 # param set RC_MAP_MODE_SW 5
 # param set RC_MAP_AUX2 6
@@ -144,6 +144,7 @@ qshell ekf2 start
 sleep 1
 
 qshell commander start
+qshell commander mode manual
 
 sleep 1
 
@@ -178,5 +179,7 @@ qshell mixer load /dev/uart_esc quad_x.main.mix
 # sleep 2
 
 # logger start -e -t
+
+param set CBRK_SUPPLY_CHK 894281
 
 # mavlink boot_complete
