--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -38,38 +38,38 @@ param set CAL_ACC0_ZOFF 0.283
 param set CAL_ACC0_ZSCALE 0.998
 
 # Calibration for the magnetometer
-# param set CAL_MAG0_ID 0
-# param set CAL_MAG0_PRIO 75
-# param set CAL_MAG0_ROT 0
-# param set CAL_MAG0_XCOMP 0.1
-# param set CAL_MAG0_XODIAG 0.1
-# param set CAL_MAG0_XOFF 0.1
-# param set CAL_MAG0_XSCALE 0.1
-# param set CAL_MAG0_YCOMP 0.1
-# param set CAL_MAG0_YODIAG 0.1
-# param set CAL_MAG0_YOFF 0.1
-# param set CAL_MAG0_YSCALE 0.1
-# param set CAL_MAG0_ZCOMP 0.1
-# param set CAL_MAG0_ZDIAG 0.1
-# param set CAL_MAG0_ZOFF 0.1
-# param set CAL_MAG0_ZSCALE 0.1
+param set CAL_MAG0_ID 0
+param set CAL_MAG0_PRIO 75
+param set CAL_MAG0_ROT 0
+param set CAL_MAG0_XCOMP 0.1
+param set CAL_MAG0_XODIAG 0.1
+param set CAL_MAG0_XOFF 0.1
+param set CAL_MAG0_XSCALE 0.1
+param set CAL_MAG0_YCOMP 0.1
+param set CAL_MAG0_YODIAG 0.1
+param set CAL_MAG0_YOFF 0.1
+param set CAL_MAG0_YSCALE 0.1
+param set CAL_MAG0_ZCOMP 0.1
+param set CAL_MAG0_ZDIAG 0.1
+param set CAL_MAG0_ZOFF 0.1
+param set CAL_MAG0_ZSCALE 0.1
 
-# param set ATT_W_MAG 0.00
+param set ATT_W_MAG 0.00
 
-# param set BAT_N_CELLS 3
-# param set MAV_TYPE 2
-# param set MC_YAW_P 12
-# param set MC_YAWRATE_P 0.08
-# param set MC_YAWRATE_I 0.0
-# param set MC_YAWRATE_D 0
-# param set MC_PITCH_P 7.0
-# param set MC_PITCHRATE_P 0.08
-# param set MC_PITCHRATE_I 0.0
-# param set MC_PITCHRATE_D 0.001
-# param set MC_ROLL_P 7.0
-# param set MC_ROLLRATE_P 0.08
-# param set MC_ROLLRATE_I 0.0
-# param set MC_ROLLRATE_D 0.001
+param set BAT_N_CELLS 3
+param set MAV_TYPE 2
+param set MC_YAW_P 12
+param set MC_YAWRATE_P 0.08
+param set MC_YAWRATE_I 0.0
+param set MC_YAWRATE_D 0
+param set MC_PITCH_P 7.0
+param set MC_PITCHRATE_P 0.08
+param set MC_PITCHRATE_I 0.0
+param set MC_PITCHRATE_D 0.001
+param set MC_ROLL_P 7.0
+param set MC_ROLLRATE_P 0.08
+param set MC_ROLLRATE_I 0.0
+param set MC_ROLLRATE_D 0.001
 
 param set RC_CHAN_CNT 4
 param set RC_MAP_THROTTLE 1
@@ -129,40 +129,26 @@ param set COM_DISARM_PRFLT -1
 qshell hmc5883 start -X -b 1
 
 qshell baro_thin_client start
-qshell imu_thin_client start
-# qshell rc driver
-# qshell esc driver
 
-sleep 1
+qshell imu_thin_client start
+
+# RC is on the apps side for now
+# qshell rc driver
 
 qshell sensors start
 
-sleep 1
-
 qshell ekf2 start
-
-sleep 1
 
 qshell commander start
 qshell commander mode manual
 
-sleep 1
-
 qshell mc_pos_control start
-
-sleep 1
 
 qshell mc_att_control start
 
-sleep 1
-
 qshell mc_rate_control start
 
-sleep 1
-
 qshell rc_update start
-
-sleep 1
 
 qshell land_detector start multicopter
 
@@ -170,16 +156,11 @@ rc_controller start
 
 qshell modalai_esc start
 
-sleep 1
-
 qshell mixer load /dev/uart_esc quad_x.main.mix
-
-# qshell commander arm -f
-
-# sleep 2
-
-# logger start -e -t
 
 param set CBRK_SUPPLY_CHK 894281
 
 # mavlink boot_complete
+
+# Force commander to arm
+# qshell commander arm -f
