More parameter tuning and debug messages added

--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -11,25 +11,27 @@ muorb start
 # any possible race conditions.
 sleep 1
 
-# param set SYS_AUTOSTART 4001
+param set SYS_AUTOSTART 4001
 
 # param set SENS_BOARD_ROT 0
 
-# Run without magnetometer or barometer
+# Run without magnetometer
 # param set SYS_HAS_MAG 0
+
+# Run without barometer
 # param set SYS_HAS_BARO 0
 
 # Calibration values for the IMU
 param set CAL_GYRO0_ID 1
 param set CAL_GYRO0_PRIO 100
-param set CAL_GYRO0_ROT 0
+param set CAL_GYRO0_ROT 8
 param set CAL_GYRO0_XOFF -0.017
 param set CAL_GYRO0_YOFF 0.001
 param set CAL_GYRO0_ZOFF -0.001
 
 param set CAL_ACC0_ID 1
 param set CAL_ACC0_PRIO 100
-param set CAL_ACC0_ROT 0
+param set CAL_ACC0_ROT 8
 param set CAL_ACC0_XOFF 0.068
 param set CAL_ACC0_XSCALE 1.002
 param set CAL_ACC0_YOFF 0.165
@@ -37,8 +39,10 @@ param set CAL_ACC0_YSCALE 1.002
 param set CAL_ACC0_ZOFF 0.283
 param set CAL_ACC0_ZSCALE 0.998
 
+param set EKF2_ABL_LIM 0.8
+
 # Calibration for the magnetometer
-param set CAL_MAG0_ID 0
+param set CAL_MAG0_ID 73225
 param set CAL_MAG0_PRIO 75
 param set CAL_MAG0_ROT 0
 param set CAL_MAG0_XCOMP 0.1
@@ -57,6 +61,7 @@ param set CAL_MAG0_ZSCALE 0.1
 param set ATT_W_MAG 0.00
 
 param set BAT_N_CELLS 3
+
 param set MAV_TYPE 2
 param set MC_YAW_P 12
 param set MC_YAWRATE_P 0.08
@@ -71,43 +76,49 @@ param set MC_ROLLRATE_P 0.08
 param set MC_ROLLRATE_I 0.0
 param set MC_ROLLRATE_D 0.001
 
-param set RC_CHAN_CNT 4
+param set RC_CHAN_CNT 5
 param set RC_MAP_THROTTLE 1
 param set RC_MAP_YAW 2
 param set RC_MAP_PITCH 3
 param set RC_MAP_ROLL 4
 
-# param set RC_MAP_MODE_SW 5
-# param set RC_MAP_AUX2 6
-# param set RC_MAP_AUX1 7
-# param set RC_MAP_FLAPS 8
-# param set RC_MAP_RETURN_SW 9
-# param set RC_MAP_POSCTL_SW 10
-# param set RC_MAP_LOITER_SW 11
-# param set RC1_MAX 1921
-# param set RC1_MIN 1078
-# param set RC1_REV -1
-# param set RC1_TRIM 1498
-# param set RC2_MAX 1920
-# param set RC2_MIN 1077
-# param set RC2_REV 1
-# param set RC2_TRIM 1496
-# param set RC3_MAX 1920
-# param set RC3_MIN 1085
-# param set RC3_REV 1
-# param set RC3_TRIM 1085
-# param set RC4_MAX 1912
-# param set RC4_MIN 1078
-# param set RC4_REV -1
-# param set RC4_TRIM 1499
-# param set RC5_MAX 1920
-# param set RC5_MIN 1078
-# param set RC5_REV 1
-# param set RC5_TRIM 1499
+param set RC_MAP_MODE_SW 5
+param set COM_FLTMODE1 0
+param set COM_FLTMODE2 0
+param set COM_FLTMODE3 0
+param set COM_FLTMODE4 0
+param set COM_FLTMODE5 0
+param set COM_FLTMODE6 0
 
-# param set RTL_LAND_DELAY 1.0
-# param set RTL_DESCEND_ALT 10
-# param set RTL_RETURN_ALT 50
+param set RC_MAP_AUX2 0
+param set RC_MAP_AUX1 0
+param set RC_MAP_FLAPS 0
+param set RC_MAP_RATT_SW 0
+param set RC_MAP_RETURN_SW 0
+param set RC_MAP_POSCTL_SW 0
+param set RC_MAP_LOITER_SW 0
+
+param set RC1_MAX 2190
+param set RC1_MIN 810
+param set RC1_TRIM 810
+param set RC2_MAX 2190
+param set RC2_MIN 810
+param set RC2_TRIM 1500
+param set RC3_MAX 2190
+param set RC3_MIN 810
+param set RC3_TRIM 1500
+param set RC4_MAX 2190
+param set RC4_MIN 810
+param set RC4_TRIM 1500
+param set RC5_MAX 2190
+param set RC5_MIN 810
+param set RC5_TRIM 810
+
+param set RTL_LAND_DELAY 1.0
+param set RTL_DESCEND_ALT 10
+param set RTL_RETURN_ALT 50
+
+param set NAV_DLL_ACT 0
 
 # Disable auto disarm. This is number of seconds to wait for takeoff
 # after arming. If no takeoff happens then it will disarm. A negative
@@ -115,15 +126,15 @@ param set RC_MAP_ROLL 4
 param set COM_DISARM_PRFLT -1
 
 # logger start -e -t
-# param set MAV_BROADCAST 1
+param set MAV_BROADCAST 1
 # dataman start
 # navigator start
 # sleep 2
-# mavlink start -x -u 14556 -r 100000
-# sleep 1
-# mavlink stream -u 14556 -s HIGHRES_IMU -r 50
-# mavlink stream -u 14556 -s ATTITUDE -r 50
-# mavlink stream -u 14556 -s RC_CHANNELS -r 20
+mavlink start -x -u 14556 -r 100000
+sleep 1
+mavlink stream -u 14556 -s HIGHRES_IMU -r 50
+mavlink stream -u 14556 -s ATTITUDE -r 50
+mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
 # Start magnetometer driver
 qshell hmc5883 start -X -b 1
@@ -160,7 +171,7 @@ qshell mixer load /dev/uart_esc quad_x.main.mix
 
 param set CBRK_SUPPLY_CHK 894281
 
-# mavlink boot_complete
+mavlink boot_complete
 
 # Force commander to arm
 # qshell commander arm -f
