Updated dspal and minor test tweaks

--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -13,7 +13,7 @@ sleep 1
 
 param set SYS_AUTOSTART 4001
 
-# param set SENS_BOARD_ROT 0
+param set SENS_BOARD_ROT 8
 
 # Run without magnetometer
 # param set SYS_HAS_MAG 0
