Setup parameters and startup for joystick control

--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -12,8 +12,9 @@ muorb start
 sleep 1
 
 param set SYS_AUTOSTART 4001
+param set SYS_AUTOCONFIG 0
 
-param set SENS_BOARD_ROT 8
+# param set SENS_BOARD_ROT 8
 
 # Run without magnetometer
 # param set SYS_HAS_MAG 0
@@ -24,14 +25,14 @@ param set SENS_BOARD_ROT 8
 # Calibration values for the IMU
 param set CAL_GYRO0_ID 1
 param set CAL_GYRO0_PRIO 100
-param set CAL_GYRO0_ROT 8
+param set CAL_GYRO0_ROT 0
 param set CAL_GYRO0_XOFF -0.017
 param set CAL_GYRO0_YOFF 0.001
 param set CAL_GYRO0_ZOFF -0.001
 
 param set CAL_ACC0_ID 1
 param set CAL_ACC0_PRIO 100
-param set CAL_ACC0_ROT 8
+param set CAL_ACC0_ROT 0
 param set CAL_ACC0_XOFF 0.068
 param set CAL_ACC0_XSCALE 1.002
 param set CAL_ACC0_YOFF 0.165
@@ -61,6 +62,7 @@ param set CAL_MAG0_ZSCALE 0.1
 param set ATT_W_MAG 0.00
 
 param set BAT_N_CELLS 3
+param set BAT1_V_CHARGED 4.05
 
 param set MAV_TYPE 2
 param set MC_YAW_P 12
@@ -76,11 +78,14 @@ param set MC_ROLLRATE_P 0.08
 param set MC_ROLLRATE_I 0.0
 param set MC_ROLLRATE_D 0.001
 
+param set COM_RC_IN_MODE 2
+param set COM_RC_LOSS_T 0.8
+
 param set RC_CHAN_CNT 5
-param set RC_MAP_THROTTLE 1
-param set RC_MAP_YAW 2
-param set RC_MAP_PITCH 3
-param set RC_MAP_ROLL 4
+param set RC_MAP_THROTTLE 4
+param set RC_MAP_YAW 3
+param set RC_MAP_PITCH 2
+param set RC_MAP_ROLL 1
 
 param set RC_MAP_MODE_SW 5
 param set COM_FLTMODE1 0
@@ -97,22 +102,50 @@ param set RC_MAP_RATT_SW 0
 param set RC_MAP_RETURN_SW 0
 param set RC_MAP_POSCTL_SW 0
 param set RC_MAP_LOITER_SW 0
+param set RC_MAP_PARAM2 0
 
-param set RC1_MAX 2190
-param set RC1_MIN 810
-param set RC1_TRIM 810
-param set RC2_MAX 2190
-param set RC2_MIN 810
+param set RC1_MAX 2000
+param set RC1_MIN 1000
+param set RC1_TRIM 1000
+param set RC2_MAX 2000
+param set RC2_MIN 1000
 param set RC2_TRIM 1500
-param set RC3_MAX 2190
-param set RC3_MIN 810
+param set RC3_MAX 2000
+param set RC3_MIN 1000
 param set RC3_TRIM 1500
-param set RC4_MAX 2190
-param set RC4_MIN 810
+param set RC4_MAX 2000
+param set RC4_MIN 1000
 param set RC4_TRIM 1500
-param set RC5_MAX 2190
-param set RC5_MIN 810
-param set RC5_TRIM 810
+param set RC5_MAX 2000
+param set RC5_MIN 1000
+param set RC5_TRIM 1000
+param set RC6_TRIM 1500
+param set RC6_MAX 2000
+param set RC6_MIN 1000
+param set RC7_TRIM 1500
+param set RC7_MAX 2000
+param set RC8_TRIM 1500
+param set RC8_MAX 2000
+param set RC9_TRIM 1500
+param set RC9_MAX 2000
+param set RC10_TRIM 1500
+param set RC10_MAX 2000
+param set RC11_TRIM 1500
+param set RC11_MAX 2000
+param set RC12_TRIM 1500
+param set RC12_MAX 2000
+param set RC13_TRIM 1500
+param set RC13_MAX 2000
+param set RC14_TRIM 1500
+param set RC14_MAX 2000
+param set RC15_TRIM 1500
+param set RC15_MAX 2000
+param set RC16_TRIM 1500
+param set RC16_MAX 2000
+param set RC17_TRIM 1500
+param set RC17_MAX 2000
+param set RC18_TRIM 1500
+param set RC18_MAX 2000
 
 param set RTL_LAND_DELAY 1.0
 param set RTL_DESCEND_ALT 10
@@ -163,7 +196,8 @@ qshell rc_update start
 
 qshell land_detector start multicopter
 
-rc_controller start
+# Set up RC
+# rc_controller start
 
 qshell modalai_esc start
 
