--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -14,7 +14,7 @@ sleep 1
 param set SYS_AUTOSTART 4001
 param set SYS_AUTOCONFIG 0
 
-# param set SENS_BOARD_ROT 8
+param set SENS_BOARD_ROT 0
 
 # Run without magnetometer
 # param set SYS_HAS_MAG 0
@@ -22,17 +22,18 @@ param set SYS_AUTOCONFIG 0
 # Run without barometer
 # param set SYS_HAS_BARO 0
 
+
 # Calibration values for the IMU
 param set CAL_GYRO0_ID 1
 param set CAL_GYRO0_PRIO 100
-param set CAL_GYRO0_ROT 0
+param set CAL_GYRO0_ROT 2
 param set CAL_GYRO0_XOFF -0.017
 param set CAL_GYRO0_YOFF 0.001
 param set CAL_GYRO0_ZOFF -0.001
 
 param set CAL_ACC0_ID 1
 param set CAL_ACC0_PRIO 100
-param set CAL_ACC0_ROT 0
+param set CAL_ACC0_ROT 2
 param set CAL_ACC0_XOFF 0.068
 param set CAL_ACC0_XSCALE 1.002
 param set CAL_ACC0_YOFF 0.165
@@ -41,6 +42,52 @@ param set CAL_ACC0_ZOFF 0.283
 param set CAL_ACC0_ZSCALE 0.998
 
 param set EKF2_ABL_LIM 0.8
+param set EKF2_TAU_POS 0.25
+param set EKF2_TAU_VEL 0.25
+
+param set MPC_VELD_LP 5.0
+
+param set MC_AIRMODE 0
+
+# tweak MPC_THR_MIN to prevent roll/pitch losing control
+# authority under rapid downward acceleration
+param set MPC_THR_MAX 0.75
+param set MPC_THR_MIN 0.08
+param set MPC_MANTHR_MIN 0.05
+
+# default position mode with a little expo, smooth mode is terrible
+param set MPC_POS_MODE 0
+param set MPC_YAW_EXPO 0.20
+param set MPC_XY_MAN_EXPO 0.20
+param set MPC_Z_MAN_EXPO 0.20
+
+# max velocities
+param set MPC_VEL_MANUAL 5.0
+param set MPC_XY_VEL_MAX 5.0
+param set MPC_XY_CRUISE 5.0
+param set MPC_Z_VEL_MAX_DN 1.5
+param set MPC_Z_VEL_MAX_UP 4.0
+param set MPC_LAND_SPEED 1.0
+
+# Horizontal position PID
+param set MPC_XY_P 0.95
+param set MPC_XY_VEL_P_ACC 3.00
+param set MPC_XY_VEL_I_ACC 0.10
+param set MPC_XY_VEL_D_ACC 0.00
+
+# Vertical position PID
+# PX4 Defaults
+param set MPC_Z_P 1.0
+param set MPC_Z_VEL_P_ACC 8.0
+param set MPC_Z_VEL_I_ACC 2.0
+param set MPC_Z_VEL_D_ACC 0.0
+
+param set MPC_TKO_RAMP_T 1.50
+param set MPC_TKO_SPEED	1.50
+param set MPC_SPOOLUP_TIME 0.0
+
+# disable rotation check on landing
+param set LNDMC_ROT_MAX 500.0
 
 # Calibration for the magnetometer
 param set CAL_MAG0_ID 73225
@@ -65,18 +112,24 @@ param set BAT_N_CELLS 3
 param set BAT1_V_CHARGED 4.05
 
 param set MAV_TYPE 2
-param set MC_YAW_P 12
-param set MC_YAWRATE_P 0.08
-param set MC_YAWRATE_I 0.0
-param set MC_YAWRATE_D 0
-param set MC_PITCH_P 7.0
+
+param set MC_YAW_P 2.0
+param set MC_YAWRATE_P 0.15
+param set MC_YAWRATE_I 0.1
+param set MC_YAWRATE_D 0.0
+param set MC_YAWRATE_K 1.0
+
+param set MC_PITCH_P 5.5
 param set MC_PITCHRATE_P 0.08
-param set MC_PITCHRATE_I 0.0
-param set MC_PITCHRATE_D 0.001
-param set MC_ROLL_P 7.0
+param set MC_PITCHRATE_I 0.2
+param set MC_PITCHRATE_D 0.0013
+param set MC_PITCHRATE_K 1.0
+
+param set MC_ROLL_P 5.5
 param set MC_ROLLRATE_P 0.08
-param set MC_ROLLRATE_I 0.0
-param set MC_ROLLRATE_D 0.001
+param set MC_ROLLRATE_I 0.2
+param set MC_ROLLRATE_D 0.0013
+param set MC_ROLLRATE_K 1.0
 
 param set COM_RC_IN_MODE 2
 param set COM_RC_LOSS_T 0.8
@@ -153,6 +206,14 @@ param set RTL_RETURN_ALT 50
 
 param set NAV_DLL_ACT 0
 
+param set UART_ESC_CONFIG 1
+param set UART_ESC_MOTOR1 1
+param set UART_ESC_MOTOR2 4
+param set UART_ESC_MOTOR3 2
+param set UART_ESC_MOTOR4 3
+param set UART_ESC_RPM_MAX 7000
+param set UART_ESC_RPM_MIN 1000
+
 # Disable auto disarm. This is number of seconds to wait for takeoff
 # after arming. If no takeoff happens then it will disarm. A negative
 # value disables this.
@@ -163,11 +224,11 @@ param set MAV_BROADCAST 1
 # dataman start
 # navigator start
 # sleep 2
-mavlink start -x -u 14556 -r 100000
+mavlink start -x -u 14556 -r 40000
 sleep 1
-mavlink stream -u 14556 -s HIGHRES_IMU -r 50
-mavlink stream -u 14556 -s ATTITUDE -r 50
-mavlink stream -u 14556 -s RC_CHANNELS -r 20
+mavlink stream -u 14556 -s HIGHRES_IMU -r 5
+mavlink stream -u 14556 -s ATTITUDE -r 5
+# mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
 # Start magnetometer driver
 qshell hmc5883 start -X -b 1
