--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -14,7 +14,11 @@ sleep 1
 param set SYS_AUTOSTART 4001
 param set SYS_AUTOCONFIG 0
 
-param set SENS_BOARD_ROT 0
+param set SENS_BOARD_ROT 2
+
+# Board offset from level calibration
+param set SENS_BOARD_X_OFF -1.18
+param set SENS_BOARD_Y_OFF -1.35
 
 # Run without magnetometer
 # param set SYS_HAS_MAG 0
@@ -22,24 +26,29 @@ param set SENS_BOARD_ROT 0
 # Run without barometer
 # param set SYS_HAS_BARO 0
 
-
-# Calibration values for the IMU
 param set CAL_GYRO0_ID 1
 param set CAL_GYRO0_PRIO 100
-param set CAL_GYRO0_ROT 2
-param set CAL_GYRO0_XOFF -0.017
-param set CAL_GYRO0_YOFF 0.001
-param set CAL_GYRO0_ZOFF -0.001
+param set CAL_GYRO0_ROT 0
+
+# Calibration values for the gyroscope
+# offset: [0.0063 0.0062 -0.0109]
+param set CAL_GYRO0_XOFF 0.0063
+param set CAL_GYRO0_YOFF 0.0062
+param set CAL_GYRO0_ZOFF -0.0109
 
 param set CAL_ACC0_ID 1
 param set CAL_ACC0_PRIO 100
-param set CAL_ACC0_ROT 2
-param set CAL_ACC0_XOFF 0.068
-param set CAL_ACC0_XSCALE 1.002
-param set CAL_ACC0_YOFF 0.165
-param set CAL_ACC0_YSCALE 1.002
-param set CAL_ACC0_ZOFF 0.283
-param set CAL_ACC0_ZSCALE 0.998
+param set CAL_ACC0_ROT 0
+
+# Calibration values for the accelerometer
+# offset: [-0.0212 0.0270 -0.0180]
+param set CAL_ACC0_XOFF -0.0212
+param set CAL_ACC0_YOFF 0.0270
+param set CAL_ACC0_ZOFF -0.0180
+# scale: [0.9961 0.9977 0.9969]
+param set CAL_ACC0_XSCALE 0.9961
+param set CAL_ACC0_YSCALE 0.9977
+param set CAL_ACC0_ZSCALE 0.9969
 
 param set EKF2_ABL_LIM 0.8
 param set EKF2_TAU_POS 0.25
