--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -66,23 +66,6 @@ param set MPC_SPOOLUP_TIME 0.0
 # disable rotation check on landing
 param set LNDMC_ROT_MAX 500.0
 
-# Calibration for the magnetometer
-param set CAL_MAG0_ID 73225
-param set CAL_MAG0_PRIO 75
-param set CAL_MAG0_ROT 0
-param set CAL_MAG0_XCOMP 0.1
-param set CAL_MAG0_XODIAG 0.1
-param set CAL_MAG0_XOFF 0.1
-param set CAL_MAG0_XSCALE 0.1
-param set CAL_MAG0_YCOMP 0.1
-param set CAL_MAG0_YODIAG 0.1
-param set CAL_MAG0_YOFF 0.1
-param set CAL_MAG0_YSCALE 0.1
-param set CAL_MAG0_ZCOMP 0.1
-param set CAL_MAG0_ZDIAG 0.1
-param set CAL_MAG0_ZOFF 0.1
-param set CAL_MAG0_ZSCALE 0.1
-
 param set ATT_W_MAG 0.00
 
 param set BAT_N_CELLS 3
@@ -208,7 +191,12 @@ mavlink stream -u 14556 -s ATTITUDE -r 5
 # mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
 # Start magnetometer driver
-qshell hmc5883 start -X -b 1
+
+# 3DR GPS / compass
+# qshell hmc5883 start -X -b 1
+
+# Pixhawk 4 GPS module
+qshell ist8310 start -X -b 1
 
 qshell baro_thin_client start
 
