--- a/boards/modalai/rb5-flight/min-m0051.config
+++ b/boards/modalai/rb5-flight/min-m0051.config
@@ -138,6 +138,7 @@ sleep 1
 
 # Start magnetometer driver
 # qshell hmc5883 start -X -b 1
+# qshell ist8310 start -X -b 1
 
 # qshell baro_thin_client start
 
