Moving commander to apps side and reverting slpi changes

--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -205,24 +205,28 @@ qshell imu_thin_client start
 # RC is on the apps side for now
 # qshell rc driver
 
+# sensors start
 qshell sensors start
 
+# ekf2 start
 qshell ekf2 start
 
-qshell commander start
-qshell commander mode manual
-
+# mc_pos_control start
 qshell mc_pos_control start
 
+# mc_att_control start
 qshell mc_att_control start
 
+# mc_rate_control start
 qshell mc_rate_control start
 
+# rc_update start
 qshell rc_update start
 
+# land_detector start multicopter
 qshell land_detector start multicopter
 
-# Set up RC
+# Set up fake RC
 # rc_controller start
 
 qshell modalai_esc start
@@ -230,6 +234,11 @@ qshell modalai_esc start
 qshell mixer load /dev/uart_esc quad_x.main.mix
 
 param set CBRK_SUPPLY_CHK 894281
+
+commander start
+commander mode manual
+# qshell commander start
+# qshell commander mode manual
 
 mavlink boot_complete
 
