Enabled GPS driver on apps side

--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -190,19 +190,17 @@ mavlink stream -u 14556 -s HIGHRES_IMU -r 5
 mavlink stream -u 14556 -s ATTITUDE -r 5
 # mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
-# Start magnetometer driver
-
-# 3DR GPS / compass
-# qshell hmc5883 start -X -b 1
-
 # Pixhawk 4 GPS module
 qshell ist8310 start -X -b 1
+gps start -d /dev/ttyHS1 -b 38400
 
+# Barometer
 qshell baro_thin_client start
 
+# IMU (accelerometer / gyroscope)
 qshell imu_thin_client start
 
-# RC is on the apps side for now
+# RC is on the apps side for now (Mavlink joystick from QGC)
 # qshell rc driver
 
 # sensors start
@@ -226,9 +224,6 @@ qshell rc_update start
 # land_detector start multicopter
 qshell land_detector start multicopter
 
-# Set up fake RC
-# rc_controller start
-
 qshell modalai_esc start
 
 qshell mixer load /dev/uart_esc quad_x.main.mix
@@ -241,6 +236,3 @@ commander mode manual
 # qshell commander mode manual
 
 mavlink boot_complete
-
-# Force commander to arm
-# qshell commander arm -f
