--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -182,7 +182,7 @@ param set COM_DISARM_PRFLT -1
 # logger start -e -t
 param set MAV_BROADCAST 1
 dataman start
-# navigator start
+navigator start
 # sleep 2
 mavlink start -x -u 14556 -r 40000
 sleep 1
