--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -166,24 +166,31 @@ param set RTL_RETURN_ALT 50
 
 param set NAV_DLL_ACT 0
 
+# ESC configuration for M500
 param set UART_ESC_CONFIG 1
 param set UART_ESC_MOTOR1 1
 param set UART_ESC_MOTOR2 4
 param set UART_ESC_MOTOR3 2
 param set UART_ESC_MOTOR4 3
-param set UART_ESC_RPM_MAX 7000
+param set UART_ESC_RPM_MAX 8000
 param set UART_ESC_RPM_MIN 1000
+
+# Allow arming without battery
+param set CBRK_SUPPLY_CHK 894281
 
 # Disable auto disarm. This is number of seconds to wait for takeoff
 # after arming. If no takeoff happens then it will disarm. A negative
 # value disables this.
 param set COM_DISARM_PRFLT -1
 
-# logger start -e -t
-param set MAV_BROADCAST 1
+# Start logging on start and use timestamps for log files
+logger start -e -t
+
 dataman start
+
 navigator start
-# sleep 2
+
+param set MAV_BROADCAST 1
 mavlink start -x -u 14556 -r 40000
 sleep 1
 mavlink stream -u 14556 -s HIGHRES_IMU -r 5
@@ -227,8 +234,6 @@ qshell land_detector start multicopter
 qshell modalai_esc start
 
 qshell mixer load /dev/uart_esc quad_x.main.mix
-
-param set CBRK_SUPPLY_CHK 894281
 
 commander start
 commander mode manual
