--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -94,76 +94,11 @@ param set MC_ROLLRATE_K 1.0
 param set COM_RC_IN_MODE 2
 param set COM_RC_LOSS_T 0.8
 
-param set RC_CHAN_CNT 5
-param set RC_MAP_THROTTLE 4
-param set RC_MAP_YAW 3
-param set RC_MAP_PITCH 2
-param set RC_MAP_ROLL 1
-
-param set RC_MAP_MODE_SW 5
-param set COM_FLTMODE1 0
-param set COM_FLTMODE2 0
-param set COM_FLTMODE3 0
-param set COM_FLTMODE4 0
-param set COM_FLTMODE5 0
-param set COM_FLTMODE6 0
-
-param set RC_MAP_AUX2 0
-param set RC_MAP_AUX1 0
-param set RC_MAP_FLAPS 0
-param set RC_MAP_RATT_SW 0
-param set RC_MAP_RETURN_SW 0
-param set RC_MAP_POSCTL_SW 0
-param set RC_MAP_LOITER_SW 0
-param set RC_MAP_PARAM2 0
-
-param set RC1_MAX 2000
-param set RC1_MIN 1000
-param set RC1_TRIM 1000
-param set RC2_MAX 2000
-param set RC2_MIN 1000
-param set RC2_TRIM 1500
-param set RC3_MAX 2000
-param set RC3_MIN 1000
-param set RC3_TRIM 1500
-param set RC4_MAX 2000
-param set RC4_MIN 1000
-param set RC4_TRIM 1500
-param set RC5_MAX 2000
-param set RC5_MIN 1000
-param set RC5_TRIM 1000
-param set RC6_TRIM 1500
-param set RC6_MAX 2000
-param set RC6_MIN 1000
-param set RC7_TRIM 1500
-param set RC7_MAX 2000
-param set RC8_TRIM 1500
-param set RC8_MAX 2000
-param set RC9_TRIM 1500
-param set RC9_MAX 2000
-param set RC10_TRIM 1500
-param set RC10_MAX 2000
-param set RC11_TRIM 1500
-param set RC11_MAX 2000
-param set RC12_TRIM 1500
-param set RC12_MAX 2000
-param set RC13_TRIM 1500
-param set RC13_MAX 2000
-param set RC14_TRIM 1500
-param set RC14_MAX 2000
-param set RC15_TRIM 1500
-param set RC15_MAX 2000
-param set RC16_TRIM 1500
-param set RC16_MAX 2000
-param set RC17_TRIM 1500
-param set RC17_MAX 2000
-param set RC18_TRIM 1500
-param set RC18_MAX 2000
-
 param set RTL_LAND_DELAY 1.0
 param set RTL_DESCEND_ALT 10
 param set RTL_RETURN_ALT 50
 
+# Disable action on data link lost
 param set NAV_DLL_ACT 0
 
 # ESC configuration for M500
