Updated rc input timeout for joystick on wifi

--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -92,7 +92,10 @@ param set MC_ROLLRATE_D 0.0013
 param set MC_ROLLRATE_K 1.0
 
 param set COM_RC_IN_MODE 2
-param set COM_RC_LOSS_T 0.8
+
+# Sending joystick commands over wifi is a bad idea for manual mode flight.
+# Best to only do this in position hold mode. Set a big timeout for this.
+param set COM_RC_LOSS_T 2.0
 
 param set RTL_LAND_DELAY 1.0
 param set RTL_DESCEND_ALT 10
@@ -160,8 +163,8 @@ qshell mc_att_control start
 # mc_rate_control start
 qshell mc_rate_control start
 
-# rc_update start
-qshell rc_update start
+rc_update start
+# qshell rc_update start
 
 # land_detector start multicopter
 qshell land_detector start multicopter
