--- a/boards/modalai/rb5-flight/min-m0051.config
+++ b/boards/modalai/rb5-flight/min-m0051.config
@@ -11,168 +11,171 @@ muorb start
 # any possible race conditions.
 sleep 1
 
-# param set SYS_AUTOSTART 4001
+param load
 
-# param set SENS_BOARD_ROT 8
+sleep 1
 
-# Run without magnetometer
-# param set SYS_HAS_MAG 0
+param set SYS_AUTOSTART 4001
+param set SYS_AUTOCONFIG 0
 
-# Run without barometer
-# param set SYS_HAS_BARO 0
+param set EKF2_ABL_LIM 0.8
+param set EKF2_TAU_POS 0.25
+param set EKF2_TAU_VEL 0.25
 
-# Calibration values for the IMU
-# param set CAL_GYRO0_ID 1
-# param set CAL_GYRO0_PRIO 100
-# param set CAL_GYRO0_ROT 8
-# param set CAL_GYRO0_XOFF -0.017
-# param set CAL_GYRO0_YOFF 0.001
-# param set CAL_GYRO0_ZOFF -0.001
+param set MPC_VELD_LP 5.0
 
-# param set CAL_ACC0_ID 1
-# param set CAL_ACC0_PRIO 100
-# param set CAL_ACC0_ROT 8
-# param set CAL_ACC0_XOFF 0.068
-# param set CAL_ACC0_XSCALE 1.002
-# param set CAL_ACC0_YOFF 0.165
-# param set CAL_ACC0_YSCALE 1.002
-# param set CAL_ACC0_ZOFF 0.283
-# param set CAL_ACC0_ZSCALE 0.998
+param set MC_AIRMODE 0
 
-# param set EKF2_ABL_LIM 0.8
+# tweak MPC_THR_MIN to prevent roll/pitch losing control
+# authority under rapid downward acceleration
+param set MPC_THR_MAX 0.75
+param set MPC_THR_MIN 0.08
+param set MPC_MANTHR_MIN 0.05
 
-# Calibration for the magnetometer
-# param set CAL_MAG0_ID 73225
-# param set CAL_MAG0_PRIO 75
-# param set CAL_MAG0_ROT 0
-# param set CAL_MAG0_XCOMP 0.1
-# param set CAL_MAG0_XODIAG 0.1
-# param set CAL_MAG0_XOFF 0.1
-# param set CAL_MAG0_XSCALE 0.1
-# param set CAL_MAG0_YCOMP 0.1
-# param set CAL_MAG0_YODIAG 0.1
-# param set CAL_MAG0_YOFF 0.1
-# param set CAL_MAG0_YSCALE 0.1
-# param set CAL_MAG0_ZCOMP 0.1
-# param set CAL_MAG0_ZDIAG 0.1
-# param set CAL_MAG0_ZOFF 0.1
-# param set CAL_MAG0_ZSCALE 0.1
+# default position mode with a little expo, smooth mode is terrible
+param set MPC_POS_MODE 0
+param set MPC_YAW_EXPO 0.20
+param set MPC_XY_MAN_EXPO 0.20
+param set MPC_Z_MAN_EXPO 0.20
 
-# param set ATT_W_MAG 0.00
+# max velocities
+param set MPC_VEL_MANUAL 5.0
+param set MPC_XY_VEL_MAX 5.0
+param set MPC_XY_CRUISE 5.0
+param set MPC_Z_VEL_MAX_DN 1.5
+param set MPC_Z_VEL_MAX_UP 4.0
+param set MPC_LAND_SPEED 1.0
 
-# param set BAT_N_CELLS 3
+# Horizontal position PID
+param set MPC_XY_P 0.95
+param set MPC_XY_VEL_P_ACC 3.00
+param set MPC_XY_VEL_I_ACC 0.10
+param set MPC_XY_VEL_D_ACC 0.00
 
-# param set MAV_TYPE 2
-# param set MC_YAW_P 12
-# param set MC_YAWRATE_P 0.08
-# param set MC_YAWRATE_I 0.0
-# param set MC_YAWRATE_D 0
-# param set MC_PITCH_P 7.0
-# param set MC_PITCHRATE_P 0.08
-# param set MC_PITCHRATE_I 0.0
-# param set MC_PITCHRATE_D 0.001
-# param set MC_ROLL_P 7.0
-# param set MC_ROLLRATE_P 0.08
-# param set MC_ROLLRATE_I 0.0
-# param set MC_ROLLRATE_D 0.001
+# Vertical position PID
+# PX4 Defaults
+param set MPC_Z_P 1.0
+param set MPC_Z_VEL_P_ACC 8.0
+param set MPC_Z_VEL_I_ACC 2.0
+param set MPC_Z_VEL_D_ACC 0.0
 
-# param set RC_CHAN_CNT 5
-# param set RC_MAP_THROTTLE 1
-# param set RC_MAP_YAW 2
-# param set RC_MAP_PITCH 3
-# param set RC_MAP_ROLL 4
+param set MPC_TKO_RAMP_T 1.50
+param set MPC_TKO_SPEED	1.50
+param set MPC_SPOOLUP_TIME 0.0
 
-# param set RC_MAP_MODE_SW 5
-# param set COM_FLTMODE1 0
-# param set COM_FLTMODE2 0
-# param set COM_FLTMODE3 0
-# param set COM_FLTMODE4 0
-# param set COM_FLTMODE5 0
-# param set COM_FLTMODE6 0
+# disable rotation check on landing
+param set LNDMC_ROT_MAX 500.0
 
-# param set RC_MAP_AUX2 0
-# param set RC_MAP_AUX1 0
-# param set RC_MAP_FLAPS 0
-# param set RC_MAP_RATT_SW 0
-# param set RC_MAP_RETURN_SW 0
-# param set RC_MAP_POSCTL_SW 0
-# param set RC_MAP_LOITER_SW 0
+param set ATT_W_MAG 0.00
 
-# param set RC1_MAX 2190
-# param set RC1_MIN 810
-# param set RC1_TRIM 810
-# param set RC2_MAX 2190
-# param set RC2_MIN 810
-# param set RC2_TRIM 1500
-# param set RC3_MAX 2190
-# param set RC3_MIN 810
-# param set RC3_TRIM 1500
-# param set RC4_MAX 2190
-# param set RC4_MIN 810
-# param set RC4_TRIM 1500
-# param set RC5_MAX 2190
-# param set RC5_MIN 810
-# param set RC5_TRIM 810
+param set BAT_N_CELLS 3
+param set BAT1_V_CHARGED 4.05
 
-# param set RTL_LAND_DELAY 1.0
-# param set RTL_DESCEND_ALT 10
-# param set RTL_RETURN_ALT 50
+param set MAV_TYPE 2
 
-# param set NAV_DLL_ACT 0
+param set MC_YAW_P 2.0
+param set MC_YAWRATE_P 0.15
+param set MC_YAWRATE_I 0.1
+param set MC_YAWRATE_D 0.0
+param set MC_YAWRATE_K 1.0
+
+param set MC_PITCH_P 5.5
+param set MC_PITCHRATE_P 0.08
+param set MC_PITCHRATE_I 0.2
+param set MC_PITCHRATE_D 0.0013
+param set MC_PITCHRATE_K 1.0
+
+param set MC_ROLL_P 5.5
+param set MC_ROLLRATE_P 0.08
+param set MC_ROLLRATE_I 0.2
+param set MC_ROLLRATE_D 0.0013
+param set MC_ROLLRATE_K 1.0
+
+param set COM_RC_IN_MODE 2
+
+# Sending joystick commands over wifi is a bad idea for manual mode flight.
+# Best to only do this in position hold mode. Set a big timeout for this.
+param set COM_RC_LOSS_T 2.0
+
+param set RTL_LAND_DELAY 1.0
+param set RTL_DESCEND_ALT 10
+param set RTL_RETURN_ALT 50
+
+# Disable action on data link lost
+param set NAV_DLL_ACT 0
+
+# ESC configuration for M500
+param set UART_ESC_CONFIG 1
+param set UART_ESC_MOTOR1 1
+param set UART_ESC_MOTOR2 4
+param set UART_ESC_MOTOR3 2
+param set UART_ESC_MOTOR4 3
+param set UART_ESC_RPM_MAX 8000
+param set UART_ESC_RPM_MIN 1000
+
+# Allow arming without battery
+param set CBRK_SUPPLY_CHK 894281
 
 # Disable auto disarm. This is number of seconds to wait for takeoff
 # after arming. If no takeoff happens then it will disarm. A negative
 # value disables this.
-# param set COM_DISARM_PRFLT -1
+param set COM_DISARM_PRFLT -1
 
-# logger start -e -t
-# param set MAV_BROADCAST 1
-# dataman start
-# navigator start
-# sleep 2
-# mavlink start -x -u 14556 -r 100000
-# sleep 1
-# mavlink stream -u 14556 -s HIGHRES_IMU -r 50
-# mavlink stream -u 14556 -s ATTITUDE -r 50
+# Start logging on start and use timestamps for log files
+logger start -e -t
+
+dataman start
+
+navigator start
+
+param set MAV_BROADCAST 1
+mavlink start -x -u 14556 -r 40000
+sleep 1
+mavlink stream -u 14556 -s HIGHRES_IMU -r 5
+mavlink stream -u 14556 -s ATTITUDE -r 5
 # mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
-# Start magnetometer driver
-# qshell hmc5883 start -X -b 1
+# Pixhawk 4 GPS module
 # qshell ist8310 start -X -b 1
+gps start -d /dev/ttyHS1 -b 38400
 
-# qshell baro_thin_client start
+# Barometer
+qshell baro_thin_client start
 
-# qshell imu_thin_client start
+# IMU (accelerometer / gyroscope)
+qshell imu_thin_client start
 
-# RC is on the apps side for now
+# RC is on the apps side for now (Mavlink joystick from QGC)
 # qshell rc driver
 
+# sensors start
 # qshell sensors start
 
+# ekf2 start
 # qshell ekf2 start
 
-# qshell commander start
-# qshell commander mode manual
-
+# mc_pos_control start
 # qshell mc_pos_control start
 
+# mc_att_control start
 # qshell mc_att_control start
 
+# mc_rate_control start
 # qshell mc_rate_control start
 
+rc_update start
 # qshell rc_update start
 
+# land_detector start multicopter
 # qshell land_detector start multicopter
-
-# rc_controller start
 
 # qshell modalai_esc start
 
 # qshell mixer load /dev/uart_esc quad_x.main.mix
 
-# param set CBRK_SUPPLY_CHK 894281
+commander start
+commander mode manual
+# qshell commander start
+# qshell commander mode manual
 
-# mavlink boot_complete
-
-# Force commander to arm
-# qshell commander arm -f
+mavlink boot_complete
