Moving everything to Qurt tasks for the DSP code. Fixing task names so that the DSP profiler prints them. Tweaking DSP thread priorites. Optimizing IMU and Barometer processing. Disable UART ESC feedback.

--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -121,12 +121,17 @@ param set CBRK_SUPPLY_CHK 894281
 # value disables this.
 param set COM_DISARM_PRFLT -1
 
+sleep 1
+
 # Start logging on start and use timestamps for log files
 logger start -e -t
 
 dataman start
 
 navigator start
+
+commander start
+commander mode manual
 
 param set MAV_BROADCAST 1
 mavlink start -x -u 14556 -r 40000
@@ -136,17 +141,9 @@ mavlink stream -u 14556 -s ATTITUDE -r 5
 # mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
 # Pixhawk 4 GPS module
-qshell ist8310 start -X -b 1
 gps start -d /dev/ttyHS1 -b 38400
 
-# Barometer
-qshell baro_thin_client start
-
-# IMU (accelerometer / gyroscope)
-qshell imu_thin_client start
-
-# RC is on the apps side for now (Mavlink joystick from QGC)
-# qshell rc driver
+sleep 1
 
 # sensors start
 qshell sensors start
@@ -169,13 +166,24 @@ rc_update start
 # land_detector start multicopter
 qshell land_detector start multicopter
 
+sleep 1
+
 qshell modalai_esc start
 
 qshell mixer load /dev/uart_esc quad_x.main.mix
 
-commander start
-commander mode manual
-# qshell commander start
-# qshell commander mode manual
+sleep 1
+
+# Magnetometer
+qshell ist8310 start -X -b 1
+
+# Barometer
+qshell baro_thin_client start
+
+# RC is on the apps side for now (Mavlink joystick from QGC)
+# qshell rc driver
+
+# IMU (accelerometer / gyroscope)
+qshell imu_thin_client start
 
 mavlink boot_complete
