--- a/boards/modalai/rb5-flight/min-m0051.config
+++ b/boards/modalai/rb5-flight/min-m0051.config
@@ -140,10 +140,10 @@ mavlink stream -u 14556 -s ATTITUDE -r 5
 gps start -d /dev/ttyHS1 -b 38400
 
 # Barometer
-qshell baro_thin_client start
+# qshell baro_thin_client start
 
 # IMU (accelerometer / gyroscope)
-qshell imu_thin_client start
+# qshell imu_thin_client start
 
 # RC is on the apps side for now (Mavlink joystick from QGC)
 # qshell rc driver
