Added support for the voxlpm power management driver

--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -69,7 +69,6 @@ param set LNDMC_ROT_MAX 500.0
 param set ATT_W_MAG 0.00
 
 param set BAT_N_CELLS 3
-param set BAT1_V_CHARGED 4.05
 
 param set MAV_TYPE 2
 
@@ -143,6 +142,8 @@ mavlink stream -u 14556 -s ATTITUDE -r 5
 # Pixhawk 4 GPS module
 gps start -d /dev/ttyHS1 -b 38400
 
+rc_update start
+
 sleep 1
 
 # sensors start
@@ -160,16 +161,13 @@ qshell mc_att_control start
 # mc_rate_control start
 qshell mc_rate_control start
 
-rc_update start
-# qshell rc_update start
-
 # land_detector start multicopter
 qshell land_detector start multicopter
 
 sleep 1
 
+# ESC driver
 qshell modalai_esc start
-
 qshell mixer load /dev/uart_esc quad_x.main.mix
 
 sleep 1
@@ -180,10 +178,10 @@ qshell ist8310 start -X -b 1
 # Barometer
 qshell baro_thin_client start
 
-# RC is on the apps side for now (Mavlink joystick from QGC)
-# qshell rc driver
-
 # IMU (accelerometer / gyroscope)
 qshell imu_thin_client start
+
+# APM power monitor
+qshell voxlpm start -X -b 2
 
 mavlink boot_complete
