--- a/boards/modalai/rb5-flight/min-m0051.config
+++ b/boards/modalai/rb5-flight/min-m0051.config
@@ -173,6 +173,9 @@ rc_update start
 
 # qshell mixer load /dev/uart_esc quad_x.main.mix
 
+# APM power monitor
+# qshell voxlpm start -X -b 2
+
 # commander start
 # commander mode manual
 # qshell commander start
