Commented out voxlpm start since it isn't working consistently yet

--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -182,6 +182,6 @@ qshell baro_thin_client start
 qshell imu_thin_client start
 
 # APM power monitor
-qshell voxlpm start -X -b 2
+# qshell voxlpm start -X -b 2
 
 mavlink boot_complete
