Added support for Spektrum RC input

--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -137,14 +137,15 @@ mavlink start -x -u 14556 -r 40000
 sleep 1
 mavlink stream -u 14556 -s HIGHRES_IMU -r 5
 mavlink stream -u 14556 -s ATTITUDE -r 5
-# mavlink stream -u 14556 -s RC_CHANNELS -r 20
+mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
 # Pixhawk 4 GPS module
 gps start -d /dev/ttyHS1 -b 38400
 
-rc_update start
-
 sleep 1
+
+spektrum_rc start -d /dev/ttyHS0
+rc_update start
 
 # sensors start
 qshell sensors start
