Changed voxlpm to only support AN231 on Qurt PX4 to avoid the issues with slave address reconfiguration

--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -113,7 +113,7 @@ param set UART_ESC_RPM_MAX 8000
 param set UART_ESC_RPM_MIN 1000
 
 # Allow arming without battery
-param set CBRK_SUPPLY_CHK 894281
+# param set CBRK_SUPPLY_CHK 894281
 
 # Disable auto disarm. This is number of seconds to wait for takeoff
 # after arming. If no takeoff happens then it will disarm. A negative
@@ -183,6 +183,6 @@ qshell baro_thin_client start
 qshell imu_thin_client start
 
 # APM power monitor
-# qshell voxlpm start -X -b 2
+qshell voxlpm start -X -b 2
 
 mavlink boot_complete
