--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -113,7 +113,7 @@ param set UART_ESC_RPM_MAX 8000
 param set UART_ESC_RPM_MIN 1000
 
 # Allow arming without battery
-# param set CBRK_SUPPLY_CHK 894281
+param set CBRK_SUPPLY_CHK 894281
 
 # Disable auto disarm. This is number of seconds to wait for takeoff
 # after arming. If no takeoff happens then it will disarm. A negative
