Added proper orientation into the magnetometer start command

--- a/boards/modalai/rb5-flight/full-m0051.config
+++ b/boards/modalai/rb5-flight/full-m0051.config
@@ -174,7 +174,7 @@ qshell mixer load /dev/uart_esc quad_x.main.mix
 sleep 1
 
 # Magnetometer
-qshell ist8310 start -X -b 1
+qshell ist8310 start -R 10 -X -b 1
 
 # Barometer
 qshell baro_thin_client start
