--- a/boards/modalai/rb5-flight/m0052-set-default-parameters.config
+++ b/boards/modalai/rb5-flight/m0052-set-default-parameters.config
@@ -4,18 +4,9 @@
 . px4-alias.sh
 
 uorb start
-muorb start
-
-# Sleep a little here. A lot happens when the uorb and muorb start
-# and we need to make sure that it all completes successfully to avoid
-# any possible race conditions.
-sleep 1
-
-param load
-
-sleep 1
 
 param set SYS_AUTOSTART 4001
+
 param set SYS_AUTOCONFIG 0
 
 param set EKF2_ABL_LIM 0.8
@@ -68,8 +59,6 @@ param set LNDMC_ROT_MAX 500.0
 
 param set ATT_W_MAG 0.00
 
-param set BAT_N_CELLS 3
-
 param set MAV_TYPE 2
 
 param set MC_YAW_P 2.0
@@ -120,69 +109,10 @@ param set CBRK_SUPPLY_CHK 894281
 # value disables this.
 param set COM_DISARM_PRFLT -1
 
-sleep 1
-
-# Start logging on start and use timestamps for log files
-logger start -e -t
-
-dataman start
-
-navigator start
-
-commander start
-commander mode manual
-
 param set MAV_BROADCAST 1
-mavlink start -x -u 14556 -r 40000
-sleep 1
-mavlink stream -u 14556 -s HIGHRES_IMU -r 5
-mavlink stream -u 14556 -s ATTITUDE -r 5
-mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
-# Pixhawk 4 GPS module
-gps start -d /dev/ttyHS2 -b 38400
+param save
 
-sleep 1
+sleep 2
 
-spektrum_rc start -d /dev/ttyHS1
-rc_update start
-
-# sensors start
-qshell sensors start
-
-# ekf2 start
-qshell ekf2 start
-
-# mc_pos_control start
-qshell mc_pos_control start
-
-# mc_att_control start
-qshell mc_att_control start
-
-# mc_rate_control start
-qshell mc_rate_control start
-
-# land_detector start multicopter
-qshell land_detector start multicopter
-
-sleep 1
-
-# ESC driver
-qshell modalai_esc start
-qshell mixer load /dev/uart_esc quad_x.main.mix
-
-sleep 1
-
-# Magnetometer
-qshell ist8310 start -R 10 -X -b 1
-
-# Barometer
-qshell baro_thin_client start
-
-# IMU (accelerometer / gyroscope)
-qshell imu_thin_client start
-
-# APM power monitor
-qshell voxlpm start -X -b 2
-
-mavlink boot_complete
+shutdown
