Touch SYS_AUTOCONFIG to make QGC error message go away

--- a/boards/modalai/rb5-flight/full-m0052.config
+++ b/boards/modalai/rb5-flight/full-m0052.config
@@ -13,6 +13,11 @@ sleep 1
 
 param load
 
+# We don't change the value of SYS_AUTOCONFIG but if it doesn't
+# show up as used then it isn't reported to QGC and we get a
+# missing parameter error.
+param touch SYS_AUTOCONFIG
+
 sleep 1
 
 # Start logging on start and use timestamps for log files
