--- a/boards/modalai/rb5-flight/m0052-set-default-parameters.config
+++ b/boards/modalai/rb5-flight/m0052-set-default-parameters.config
@@ -102,6 +102,9 @@ param set UART_ESC_RPM_MIN 1000
 # Allow arming without battery
 param set CBRK_SUPPLY_CHK 894281
 
+# Without this QGC will indicate that GPS is disabled even when it isn't
+param set COM_ARM_WO_GPS 0
+
 # Disable auto disarm. This is number of seconds to wait for takeoff
 # after arming. If no takeoff happens then it will disarm. A negative
 # value disables this.
