Added module starts for the flight_mode_manager and mc_hover_thrust_estimator

--- a/boards/modalai/rb5-flight/full-m0052.config
+++ b/boards/modalai/rb5-flight/full-m0052.config
@@ -59,6 +59,11 @@ qshell mc_att_control start
 # mc_rate_control start
 qshell mc_rate_control start
 
+qshell mc_hover_thrust_estimator start
+
+# This is needed for altitude and position hold modes
+flight_mode_manager start
+
 # land_detector start multicopter
 qshell land_detector start multicopter
 
