Change to RC as default over joystick. Disable safety switch check

--- a/boards/modalai/rb5-flight/m0052-set-default-parameters.config
+++ b/boards/modalai/rb5-flight/m0052-set-default-parameters.config
@@ -77,7 +77,11 @@ param set MC_ROLLRATE_I 0.2
 param set MC_ROLLRATE_D 0.0013
 param set MC_ROLLRATE_K 1.0
 
-param set COM_RC_IN_MODE 1
+# Assume RC as default
+param set COM_RC_IN_MODE 0
+
+# Disable since there is no safety switch
+param set COM_PREARM_MODE 0
 
 # Sending joystick commands over wifi is a bad idea for manual mode flight.
 # Best to only do this in position hold mode. Set a big timeout for this.
