Add imu_server start to default configuration

--- a/boards/modalai/rb5-flight/full-m0052.config
+++ b/boards/modalai/rb5-flight/full-m0052.config
@@ -87,4 +87,7 @@ qshell imu_thin_client start
 # APM power monitor
 qshell voxlpm start -X -b 2
 
+# Start up the IMU server to support VIO
+imu_server start
+
 mavlink boot_complete
