--- a/boards/modalai/rb5-flight/full-m0052.config
+++ b/boards/modalai/rb5-flight/full-m0052.config
@@ -30,6 +30,9 @@ navigator start
 commander start
 commander mode manual
 
+# Can use something like this to direct PX4 to a specific QGC
+# mavlink start -x -o 14547 -r 40000 -n wlan0 -t 192.168.1.138
+
 mavlink start -x -u 14556 -r 40000
 sleep 1
 mavlink stream -u 14556 -s HIGHRES_IMU -r 5
