Moved sensor driver start before the modules that rely on them to prevent timeouts

--- a/boards/modalai/rb5-flight/full-m0052.config
+++ b/boards/modalai/rb5-flight/full-m0052.config
@@ -31,7 +31,7 @@ commander start
 commander mode manual
 
 # Can use something like this to direct PX4 to a specific QGC
-# mavlink start -x -o 14547 -r 40000 -n wlan0 -t 192.168.1.138
+# mavlink start -x -o 14547 -r 40000 -n eth1 -t 192.168.0.117
 
 mavlink start -x -u 14556 -r 40000
 sleep 1
@@ -46,6 +46,17 @@ sleep 1
 
 spektrum_rc start -d /dev/ttyHS1
 rc_update start
+
+# Magnetometer
+qshell ist8310 start -R 10 -X -b 1
+
+# Barometer
+qshell baro_thin_client start
+
+# IMU (accelerometer / gyroscope)
+qshell imu_thin_client start
+
+sleep 1
 
 # sensors start
 qshell sensors start
@@ -77,15 +88,6 @@ qshell modalai_esc start
 qshell mixer load /dev/uart_esc quad_x.main.mix
 
 sleep 1
-
-# Magnetometer
-qshell ist8310 start -R 10 -X -b 1
-
-# Barometer
-qshell baro_thin_client start
-
-# IMU (accelerometer / gyroscope)
-qshell imu_thin_client start
 
 # APM power monitor
 qshell voxlpm start -X -b 2
