Removed the -e option from logger start

--- a/boards/modalai/rb5-flight/full-m0052.config
+++ b/boards/modalai/rb5-flight/full-m0052.config
@@ -21,7 +21,7 @@ param touch SYS_AUTOCONFIG
 sleep 1
 
 # Start logging on start and use timestamps for log files
-logger start -e -t
+logger start -t
 
 dataman start
 
