--- a/boards/modalai/rb5-flight/full-m0052.config
+++ b/boards/modalai/rb5-flight/full-m0052.config
@@ -45,6 +45,7 @@ gps start -d /dev/ttyHS2 -b 38400
 sleep 1
 
 spektrum_rc start -d /dev/ttyHS1
+rc_update start
 
 # Magnetometer
 qshell ist8310 start -R 10 -X -b 1
