Some code cleanup and optimization

--- a/boards/modalai/rb5-flight/full-m0052.config
+++ b/boards/modalai/rb5-flight/full-m0052.config
@@ -18,6 +18,10 @@ param load
 # missing parameter error.
 param touch SYS_AUTOCONFIG
 
+# Causes IMU FIFO read to be triggered every 2ms. This has to be here to prevent
+# any other values from being used. Other values will cause a crash!
+param set IMU_GYRO_RATEMAX 500
+
 sleep 1
 
 # Start logging on start and use timestamps for log files
@@ -45,6 +49,7 @@ gps start -d /dev/ttyHS2 -b 38400
 sleep 1
 
 spektrum_rc start -d /dev/ttyHS1
+rc_update start
 
 # Magnetometer
 qshell ist8310 start -R 10 -X -b 1
@@ -53,7 +58,7 @@ qshell ist8310 start -R 10 -X -b 1
 qshell baro_thin_client start
 
 # IMU (accelerometer / gyroscope)
-qshell imu_thin_client start
+qshell icm42688p start -s
 
 sleep 1
 
